{{$NEXT}}

    - Avoid 'used only once' warnings in BEGIN and END blocks (James E Keenan <jkeenan@cpan.org>)

1.302168  2019-09-06 07:40:18-07:00 America/Los_Angeles

    - Fix Typo in a Test2::API::Breakage warning (Thanks E. Choroba)
    - Delay loading of Term::Table until needed (Thanks Graham Knop)

1.302167  2019-08-23 14:07:58-07:00 America/Los_Angeles

    - add test2_is_testing_done api method
    - Fix string compare warning

1.302166  2019-08-15 10:37:01-07:00 America/Los_Angeles

    - Fix context test on older perls

1.302165  2019-08-15 10:21:09-07:00 America/Los_Angeles

    - Better diagnostics when a context is destroyed unexpectedly
    - Add an event to notify when END phase starts

1.302164  2019-04-27 01:43:44-07:00 America/Los_Angeles

    - No changes since trial

1.302163  2019-04-25 05:45:47-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Do not use threads::Shared in Test::Tester::Capture (#826)
    - Add missing version info to Info/Table
    - Fix event in global destruction bug (#827)
    - Proper fix for todo = '' (#812, #829)

1.302162  2019-02-05 19:55:14-08:00 America/Los_Angeles

    - Typo fixes in documentation

1.302161  2019-01-29 09:34:27-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Remove SHM Optimization

1.302160  2019-01-18 11:44:33-08:00 America/Los_Angeles

    - No Changes since last trial release

1.302159  2019-01-09 13:21:37-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add table support to ctx->fail and ctx->fail_and_return
    - Fix Instance.t on haiku-os

1.302158  2019-01-08 15:36:24-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix TAP test on windows
    - Fix math errors in table indentation
    - Devel requires Term::Table

1.302157  2019-01-08 14:10:29-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix minor typos and missing doc sections
    - Add table support in info facet and TAP formatter

1.302156  2019-01-07 11:13:07-08:00 America/Los_Angeles

    - No changes from last trial
